fix(path): align facade access and append creation